# Face-Detection-RetinaFace-Android

./: .gitignore  README.md  settings.gradle.kts
docs/: index.html  navigation.html
docs/lib/: package-list
docs/lib/com.appliedrec.verid3.facedetection.retinaface/: index.html  to-flags.html
docs/lib/com.appliedrec.verid3.facedetection.retinaface/-face-detection-retina-face/: -face-detection-retina-face.html  close.html  confidence-threshold.html  configuration.html  detect-faces-in-image.html  index.html  model-path.html  nnapi-flags.html  use-nnapi.html
docs/lib/com.appliedrec.verid3.facedetection.retinaface/-model-variant/: entries.html  index.html  model-name.html  value-of.html  values.html
docs/lib/com.appliedrec.verid3.facedetection.retinaface/-model-variant/-companion/: index.html  (+1 more)
docs/lib/com.appliedrec.verid3.facedetection.retinaface/-nnapi-options/: entries.html  flag.html  index.html  value-of.html  values.html
docs/lib/com.appliedrec.verid3.facedetection.retinaface/-session-configuration/: index.html  model-variant.html  nnapi-options.html  to-string.html  use-nnapi.html
docs/scripts/: pages.json
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle.kts
lib/src/main/assets/: RetinaFace320_FP16.onnx  RetinaFace320_FP32.onnx  RetinaFace320_INT8.onnx  RetinaFace512_FP16.onnx  RetinaFace512_FP32.onnx  RetinaFace512_INT8.onnx  RetinaFace_FP16.onnx  RetinaFace_FP32.onnx  RetinaFace_INT8.onnx
lib/src/main/cpp/: CMakeLists.txt  CpuPreprocessing.h  FaceDetection.cpp  FaceDetection.h  GpuPreprocessing.cpp  GpuPreprocessing.h  GpuPreprocessingOld.cpp  GpuPreprocessingTest.cpp  Logger.h  OptimalSessionSettingsSelector.cpp  OptimalSessionSettingsSelector.h  Postprocessing.cpp  Postprocessing.h  Preprocessing.cpp  Preprocessing.h  core.cpp
lib/src/main/cpp/onnxruntime/include/onnxruntime/core/session/: onnxruntime_cxx_api.h
testapp/: build.gradle.kts
testapp/src/main/: AndroidManifest.xml
(+39 files in other folders)
